...
	let {fontScale} = useWindowDimensions()
	let isFocused = useIsFocused()

	return (
		<>
			<Stack.Screen options={{headerLargeTitleEnabled: true}} />
			<Stack.Title>All About Olaf</Stack.Title>
			<Stack.Toolbar placement="right">
				<Stack.Toolbar.Button
					accessibilityLabel="Open Settings"
					icon="gear"
					onPress={() => router.navigate('/SettingsRoot')}
				/>
			</Stack.Toolbar>
			<Host
				matchContents={false}
				modifiers={[accessibilityIdentifier('screen-homescreen')]}
				style={styles.host}
			>
				<ScrollView>
					<VStack
						modifiers={[padding({all: SCREEN_MARGIN}), frame({maxWidth: FILL_WIDTH})]}
						spacing={TILE_SPACING}
...
