...
					{TERMS.map((term) => (
						<Label key={term.text} systemImage={term.symbol} title={term.text} />
					))}
				</Section>

				<Section>
					<ActionRow onPress={() => dispatch(acknowledgeAcknowledgement(true))} title="I Agree" />
				</Section>
			</List>
		</Host>
	)
}

...
