...
	let hasActiveFilter = filters.some((f) => f.spec.selected.length)

	return (
		<>
			{header}

			<Host style={styles.host} testID="stream-list">
				<List
					modifiers={[
						listStyle('insetGrouped'),
						refreshable(async () => {
							await refetch()
						}),
...
