...
			contentInsetAdjustmentBehavior="automatic"
			keyboardDismissMode="on-drag"
			keyboardShouldPersistTaps="always"
		>
			<InfoHeader
				message="If you could tell us what the word and definition should be, we&rsquo;d greatly appreciate it."
				title="Thanks for spotting a problem!"
			/>

			<TableView>
				<Section header="WORD">
					<TitleCell onChange={setTerm} text={term} />
				</Section>
...
